# NxiwNetwork

./: .gitignore  changelog-1.1.0-dev.4.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tyrnguard/client/: CaptchaWebViewManager.kt  DeployManager.kt  MainActivity.kt  ManlCaptchaWebViewManager.kt  SettingsStore.kt  Theme.kt  TunnelManager.kt  TunnelService.kt  UserAgentGenerator.kt  WdttApplication.kt  WdttTileService.kt  WdttWidgetProvider.kt  WireGuardHelper.kt
app/src/main/java/com/tyrnguard/client/ui/: DeployTab.kt  ExceptionsTab.kt  InfoTab.kt  LogsTab.kt  SettingsTab.kt
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: wdtt_widget_info.xml
client/android/: build.gradle.kts  settings.gradle.kts
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/assets/: CHANGELOG.md  HELP.md  deploy.sh
client/android/app/src/main/java/com/nxiwnetwork/client/: AppDiagnostics.kt  Theme.kt  (+19 more)
client/android/app/src/main/res/values/: themes.xml
client/android/app/src/main/res/xml/: nxiw_widget_info.xml
client/core/: creds.go  dispatcher.go  group.go  main.go  session.go  slider_captcha.go
client/core-go/: dispatcher.go  go.mod  go.sum  packet_pool.go  session.go  stats.go  worker_scheduler.c  worker_scheduler.h  worker_scheduler_cgo.go  worker_scheduler_pure.go
client/core-rs/: Cargo.toml  build.rs
client/core-rs/native/: backend.c  backend.h
client/core-rs/src/: main.rs  tcp_turn_conn.rs
server/: go.mod  go.sum  server.go
(+7 files in other folders)
