[package]
name = "nxiwnetwork-core-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "client_rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
turn = "=0.10.0"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
webrtc-dtls = "=0.12.0"
util = { package = "webrtc-util", version = "=0.11.0", default-features = false, features = ["conn"] }
